# smoosh

./: .gitignore  README.md  pyproject.toml
src/smoosh/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
src/smoosh/authorship/: models.py
src/smoosh/media/: apps.py  models.py
src/smoosh/media/migrations/: 0001_initial.py
