[project]
name = "smoosh"
version = "0.1.0"
description = "Organise and serve your adult content."
readme = "README.md"
authors = [
    { name = "Smoosh Developer", email = "smooshdev@smoosh.ing" }
]
requires-python = ">=3.12.4"
dependencies = [
    "django>=5.1.5",
    "django-pghistory>=3.5.1",
    "xxhash>=3.5.0",
]

[project.scripts]
"manage.py" = "smoosh.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "ruff>=0.9.4",
]
